--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ body {
 }
 
 .list {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 
@@ -94,20 +96,30 @@ body {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #ececec;
+  margin-bottom: 94px;
   background-color: var(--main-background-color);
-  background-color: orange;
 }
 
-.header ul {
+.header .list {
   padding-left: 0;
 }
 
 .header .container {
+  display: flex;
+  justify-content: space-between;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.header .logo {
+  display: flex;
+  align-items: center;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-right: 93px;
 }
 
 .site-nav {
@@ -122,11 +134,11 @@ body {
   margin-right: 50px;
 }
 
-.header-link {
+.address-list {
   display: flex;
 }
 
-.header-link .item:not(:first-child) {
+.address-list .item:not(:first-child) {
   margin-left: 50px;
 }
 
