--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@
   --the-third-background-color: #f5f4fa;
 }
 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: var(--main-font);
   font-style: normal;
@@ -75,13 +82,16 @@ body {
 }
 
 .button-portfolio {
+  display: block;
   color: var(--primary-text-color);
   background-color: var(--the-third-background-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
   letter-spacing: 0.03em;
+  padding: 6px 22px;
   text-decoration: none;
+  border-radius: 4px;
   border: none;
 }
 
@@ -105,8 +115,7 @@ body {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #ececec;
-  /* background-color: var(--main-background-color); */
-  background-color: green;
+  background-color: var(--main-background-color);
 }
 
 .header .list {
@@ -145,6 +154,7 @@ body {
 
 .address-list {
   display: flex;
+  margin-left: auto;
 }
 
 .address-list .item:not(:first-child) {
@@ -302,8 +312,7 @@ body {
 
 /* ===== PORTFOLIO ===== */
 .portfolio {
-  /* background-color: var(--main-background-color); */
-  background-color: plum;
+  background-color: var(--main-background-color);
 }
 
 .portfolio .container {
@@ -335,6 +344,7 @@ body {
 }
 
 .portfolio-title {
+  margin-bottom: 4px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
