--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@
   padding: 0;
 }
 
+img {
+  display: block;
+}
+
 .list {
   list-style: none;
 }
@@ -27,6 +31,14 @@
 
 .address {
   font-style: normal;
+}
+
+.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 /* ===== Hidden title ===== */
@@ -54,6 +66,8 @@ body {
 
 /* ===== COMPONENTS ===== */
 .logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
   font-family: var(--secondary-font);
   font-style: normal;
   font-size: 26px;
@@ -123,18 +137,11 @@ body {
 .header .container {
   display: flex;
   justify-content: space-between;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .header .logo {
   display: flex;
   align-items: center;
-  padding-top: 0;
-  padding-bottom: 0;
   margin-right: 93px;
 }
 
@@ -201,6 +208,11 @@ body {
   background-color: var(--secondary-background-color);
 }
 
+.hero .container {
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+
 .hero-title {
   font-weight: 900;
   font-size: 44px;
@@ -217,7 +229,22 @@ body {
   background-color: var(--main-background-color);
 }
 
+.about .container {
+  padding-top: 94px;
+  padding-bottom: 47px;
+}
+
+.about-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about-list .item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .about-subtitle {
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -237,11 +264,26 @@ body {
   background-color: var(--main-background-color);
 }
 
+.works .container {
+  padding-top: 47px;
+  padding-bottom: 94px;
+}
+
 .works .title {
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.167;
   text-align: center;
   color: var(--primary-text-color);
+}
+
+.works-list {
+  display: flex;
+  justify-content: center;
+}
+
+.works-list .item:not(:last-child) {
+  margin-right: 30px;
 }
 /* ===== END WHAT ARE WE DOING ===== */
 
@@ -250,7 +292,31 @@ body {
   background-color: var(--the-third-background-color);
 }
 
+.team .container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.team-list {
+  display: flex;
+  justify-content: center;
+}
+
+.team-card {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: var(--main-background-color);
+  text-align: center;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.team-list .item:not(:last-child) {
+  padding-right: 30px;
+}
+
 .team .title {
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.167;
   text-align: center;
@@ -258,6 +324,7 @@ body {
 }
 
 .team-subtitle {
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -287,12 +354,7 @@ body {
 }
 
 .footer .container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
   padding-top: 60px;
-  padding-right: 15px;
-  padding-left: 15px;
   padding-bottom: 60px;
 }
 
@@ -314,12 +376,7 @@ body {
 }
 
 .portfolio .container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
   padding-top: 94px;
-  padding-right: 15px;
-  padding-left: 15px;
   padding-bottom: 94px;
 }
 
@@ -354,10 +411,6 @@ body {
   font-size: 16px;
   line-height: 1.875;
   color: var(--secondary-text-color);
-}
-
-.portfolio-img {
-  display: block;
 }
 
 .portfolio-card {
