--- a/css/styles.css
+++ b/css/styles.css
@@ -86,10 +86,17 @@ body {
 }
 
 .button-hero {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--accent-color);
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
+  padding: 10px 32px;
+  text-decoration: none;
+  border-radius: 4px;
+  border: none;
   color: var(--main-background-color);
 }
 
@@ -214,6 +221,10 @@ body {
 }
 
 .hero-title {
+  margin-bottom: 40px;
+  max-width: 696px;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
